Исправлено: - Варнинги связанные с использованием текста при запуске приложения
Добавлено:
- Начал верстать страницу регистрации
- Компонент с кастомной кнопкой
- Подключил и настроил Tailwind

--- a/app.json
+++ b/app.json
@@ -16,13 +16,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.hon1n.attendly"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.hon1n.attendly"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -45,6 +47,14 @@
           ]
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "5bea05fc-f125-48fb-9d10-d4c32c5ae78e"
+      }
+    }
   }
 }
